data/all_generated_tests/raw_wast_tests/br_table_TypeMismatchinControlFlowInstructions_2455.wast
;; 5. **Test: Backward BrTable within Loop, Mismatched Operand Types**    - **Description**:      A `br_table` is used within a `loop`, the `loop` expects an `f32` type but an `i32` is provided in `br_table`.    - **Constraint Checked**:      Ensures correct type matching when using backward branching within loops.    - **Related Type Mismatch**:      Backward branch type mismatch within loops.

(assert_invalid
  (module (func $backward-brtable-loop-mismatch
    (loop (result f32) 
      (i32.const 1) 
      (br_table 0 (i32.const 0))
    )
  ))
  "type mismatch"
)